# j-incunabulum-homage

./: .gitignore  .replit  README.md  custom_recursive_descent_parser_strategy.md  dependency_and_panic_analysis.md  ebnf.md  ebnf.txt  ebnf_analysis.md  first_line_indent_bug_strategy.md  github_actions_wasm_strategy.md  github_actions_workflow_merge_strategy.md  github_pages_deployment_final_steps.md  github_pages_implementation_analysis.md  github_pages_integrated_implementation.md  github_pages_integrated_workflow_analysis.md  github_pages_replit_frontend_strategy.md  github_pages_wasm_deployment_guide.md  improvement_strategy.md  j_context_sensitivity_strategy.md  j_custom_parser_next_phases_strategy.md  j_custom_parser_phase1_strategy.md  j_custom_parser_phase2_strategy.md  j_custom_parser_remaining_phases_strategy.md  j_data_structure_enhancement_design.md  j_interpreter.c  j_interpreter.rs  j_interpreter_architecture.md  j_interpreter_features.md  j_interpreter_fragment.c  j_lalrpop_feasibility_analysis.md  j_lalrpop_long_build_strategy.md  j_lalrpop_phase1_implementation_strategy.md  j_minimal_wasm_adapter_design.md  j_parser_algorithm_analysis.md  j_parser_generator_strategy.md  j_parser_semantic_integration_analysis.md  j_remaining_operators_implementation_strategy.md  j_rust.h  j_rust_adapter.c  j_simple.c  (+29 more)
j_rust/: Cargo.toml
j_rust/src/: lib.rs
simple_server/: Cargo.toml  build.rs  build_log.txt  j_order_of_operations.md  wasm_test.js
simple_server/src/: custom_parser.rs  evaluator.rs  interpreter.rs  j_array.rs  j_grammar.lalrpop  j_grammar_generated.rs  j_interpreter.rs  lalr_parser.rs  lalr_parser_test.rs  lib.rs  main.rs  main_backup.rs  parser.rs  semantic_analyzer.rs  test_suite.rs  tokenizer.rs  visualizer.rs
simple_server/static/: app-init.js  hello_world.html  http-adapter.js  j_repl.html
(+25 files in other folders)
