[package]
name = "j_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "j_rust"
crate-type = ["cdylib"]  # Create a dynamic library for C interoperability

[dependencies]
libc = "0.2"  # For C interoperability
