[package]
name = "simple_server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = "0.12"
lalrpop-util = "0.20"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

# Only compile LALRPOP generator for native targets
[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
lalrpop = "0.20"
