[package]
name = "simple_server"
version = "0.1.0"
edition = "2021"

[lib]
name = "simple_server_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "simple_server"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = "0.12"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
serde_json = "1.0"
